# eval-blog

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
post/: evals-are-measurements-not-tests.md  on publish  the-number-is-not-the-decision.md
src/: cross_check.py  eval_stats.py  paired_check.py
